crates/toml/tests/snapshots/invalid/control/only-vt.stderr
TOML parse error at line 1, column 2
  |
1 | 
  |  ^
key with no value, expected `=`

---
TOML parse error at line 1, column 1
  |
1 | 
  | ^
invalid unquoted key, expected letters, numbers, `-`, `_`
